kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/WrongValueParametersCount.kt
package test

import java.util.*

public open class WrongValueParametersCount {
    public open fun foo() : Int? {
        throw UnsupportedOperationException()
    }
}
